<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/sort"
        android:icon="@drawable/menu_sortby"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:checkableBehavior="single">
            <item
                android:id="@+id/all"
                android:title="@string/all"
                android:checked="true"/>

            <item
                android:id="@+id/tv"
                android:title="@string/tv"/>

            <item
                android:id="@+id/movies"
                android:title="@string/movies"/>

            <item
                android:id="@+id/ova"
                android:title="@string/ova"/>

            <item
                android:id="@+id/special"
                android:title="@string/special"/>

            </group>

        </menu>

    </item>

</menu>